--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -6,7 +6,7 @@
     <ng-container *ngIf="!this.quizCanBeAnswered">
       <div class="window-body_quiz-answered">
         <label>You already answered for now... </label>
-        <label>Come back in: <b>[{{this.countdown}}]</b></label>
+        <label>Come back in: &nbsp;<b>[{{this.countdown}}]</b></label>
       </div>
     </ng-container>
 
