#14 adding point specification

--- a/src/app/question-window/question-window.component.sass
+++ b/src/app/question-window/question-window.component.sass
@@ -33,6 +33,10 @@
             font-weight: bold
             max-width: 250px
 
+          &_points
+            font-style: italic
+            margin: 0px 5px 5px 5px
+
           &_list
             display: flex
             flex-direction: column
