--- a/src/app/question-window/question-window.component.html
+++ b/src/app/question-window/question-window.component.html
@@ -12,6 +12,7 @@
       <ng-container *ngIf="this.questionLoaded">
         <div class="window_question_body_loaded">
           <label class="window_question_body_loaded_title">{{this.question}}</label>
+          <label class="window_question_body_loaded_points">[{{this.questionPoints}} point(s) for this question]</label>
           <div class="window_question_body_loaded_list">
             <ng-container *ngFor="let answer of this.answers">
               <button [disabled]="this.selectedAnswer"
