--- a/src/app/common/icon-button/icon-button.component.html
+++ b/src/app/common/icon-button/icon-button.component.html
@@ -1,6 +1,6 @@
 <button [disabled]="this.disabled" (click)="this.onClick()">
   <img
-    [ngSrc]="this.iconPath" [ngClass]="this.disabled ? 'disabled' : ''"
+    [ngSrc]="'assets/icons/20x20/' + this.iconPath" [ngClass]="this.disabled ? 'disabled' : ''"
     alt="" [height]="this.iconSize" [width]="this.iconSize"/>
   {{this.title}}
 </button>
