--- a/src/app/common/window-title-bar/window-title-bar.component.html
+++ b/src/app/common/window-title-bar/window-title-bar.component.html
@@ -1,7 +1,7 @@
 <div class="title-bar">
   <div class="title-bar-text">
     <img
-      [ngSrc]="this.iconPath"
+      [ngSrc]="'assets/icons/15x15/' + this.iconPath"
       alt="" [height]="this.iconSize" [width]="this.iconSize" />
     {{this.title}}
   </div>
