--- a/src/app/about-window/about-window.component.html
+++ b/src/app/about-window/about-window.component.html
@@ -1,5 +1,5 @@
 <div class="window">
-  <app-window-title-bar iconPath="assets/icons/about.png" title="About XPQuiz"></app-window-title-bar>
+  <app-window-title-bar iconPath="about.png" title="About XPQuiz"></app-window-title-bar>
   <div class="window-body">
     <label><b>XPQuiz</b>&nbsp;- Version 1.0.1</label>
     <label class="main">Created by&nbsp;<b><a href="https://isahann.github.io">Isahann Hanacleto</a></b></label>
@@ -13,7 +13,7 @@
       href="https://www.deviantart.com/marchmountain/art/Windows-XP-High-Resolution-Icon-Pack-916042853">marchmountain
       at DeviantArt</a></b></label>
 
-    <app-icon-button iconPath="assets/icons/home.png" title="Return to home"
+    <app-icon-button iconPath="home.png" title="Return to home"
                      (onButtonClick)="this.returnHome()"></app-icon-button>
   </div>
 </div>
