--- a/src/app/correct-answer-window/correct-answer-window.component.html
+++ b/src/app/correct-answer-window/correct-answer-window.component.html
@@ -1,5 +1,5 @@
 <div class="window">
-  <app-window-title-bar iconPath="assets/icons/success.png" title="You did it!"></app-window-title-bar>
+  <app-window-title-bar iconPath="success.png" title="You did it!"></app-window-title-bar>
   <div class="window-body">
     <div class="window-body_title">
       <label><b>Congratulations!</b></label>
@@ -7,7 +7,7 @@
       <label>Come back in 3 hours for another question!</label>
     </div>
 
-    <app-icon-button iconPath="assets/icons/home.png" title="Return to home"
+    <app-icon-button iconPath="home.png" title="Return to home"
                      (onButtonClick)="this.returnHome()"></app-icon-button>
   </div>
 </div>
