--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -1,5 +1,5 @@
 <div class="window">
-  <app-window-title-bar iconPath="assets/icons/home.png" title="Welcome!"></app-window-title-bar>
+  <app-window-title-bar iconPath="home.png" title="Welcome!"></app-window-title-bar>
   <div class="window-body">
     <label>Welcome to &nbsp;<b>XPQuiz</b>!</label>
 
@@ -11,12 +11,12 @@
     </ng-container>
 
     <div class="window-body_buttons">
-      <app-icon-button iconPath="assets/icons/quiz.png" title="New quiz"
+      <app-icon-button iconPath="quiz.png" title="New quiz"
                        (onButtonClick)="this.redirectTo(PathsEnum.QUIZ)"
                        [disabled]="!this.quizCanBeAnswered"></app-icon-button>
-      <app-icon-button iconPath="assets/icons/score.png" title="My score"
+      <app-icon-button iconPath="score.png" title="My score"
                        (onButtonClick)="this.redirectTo(PathsEnum.SCORES)"></app-icon-button>
-      <app-icon-button iconPath="assets/icons/about.png" title="About"
+      <app-icon-button iconPath="about.png" title="About"
                        (onButtonClick)="this.redirectTo(PathsEnum.ABOUT)"></app-icon-button>
     </div>
   </div>
