--- a/src/app/score-window/score-window.component.html
+++ b/src/app/score-window/score-window.component.html
@@ -1,11 +1,11 @@
 <div class="window">
-  <app-window-title-bar iconPath="assets/icons/score.png" title="Score"></app-window-title-bar>
+  <app-window-title-bar iconPath="score.png" title="Score"></app-window-title-bar>
   <div class="window-body">
     <div class="window-body_title">
       <label>You currently have &nbsp;<b>[{{this.score}}]</b>&nbsp; points!</label>
     </div>
 
-    <app-icon-button iconPath="assets/icons/home.png" title="Return to home"
+    <app-icon-button iconPath="home.png" title="Return to home"
                      (onButtonClick)="this.returnHome()"></app-icon-button>
   </div>
 </div>
