--- a/src/app/score-window/score-window.component.sass
+++ b/src/app/score-window/score-window.component.sass
@@ -10,6 +10,24 @@
     align-items: center
     justify-content: center
 
-    label
-      margin: 5px
+    &_main
+      margin: 10px
       text-align: center
+
+    &_scores
+      display: flex
+      flex-direction: row
+      align-items: center
+      justify-content: space-between
+      width: 200px
+      margin: 10px
+
+      &_titles
+        display: flex
+        flex-direction: column
+        margin: 3px
+
+      &_results
+        display: flex
+        flex-direction: column
+        margin: 3px
