#19 adding clipboard score copy

--- a/src/app/score-window/score-window.component.html
+++ b/src/app/score-window/score-window.component.html
@@ -16,7 +16,11 @@
         </div>
       </div>
     </div>
-    <app-icon-button iconPath="home.png" title="Return to home"
-                     (onButtonClick)="this.returnHome()"></app-icon-button>
+
+    <div class="window-body_buttons">
+      <app-icon-button iconPath="copy.png" title="Copy score to clipboard" [copy-clipboard]="this.clipboardMessage"></app-icon-button>
+      <app-icon-button iconPath="home.png" title="Return to home"
+                       (onButtonClick)="this.returnHome()"></app-icon-button>
+    </div>
   </div>
 </div>
