--- a/src/app/score-window/score-window.component.sass
+++ b/src/app/score-window/score-window.component.sass
@@ -31,3 +31,12 @@
         display: flex
         flex-direction: column
         margin: 3px
+
+  &_buttons
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+
+    app-icon-button
+      margin: 3px
