--- a/src/app/score-window/score-window.component.html
+++ b/src/app/score-window/score-window.component.html
@@ -18,9 +18,12 @@
     </div>
 
     <div class="window-body_buttons">
-      <app-icon-button iconPath="copy.png" title="Copy score to clipboard" [copy-clipboard]="this.clipboardMessage"></app-icon-button>
+      <app-icon-button iconPath="copy.png" title="Share score" [copy-clipboard]="this.clipboardText" (click)="this.showClipboardMessage()"></app-icon-button>
       <app-icon-button iconPath="home.png" title="Return to home"
                        (onButtonClick)="this.returnHome()"></app-icon-button>
+    </div>
+    <div *ngIf="this.displayClipboardMessage">
+      <label class="window-body_clipboard-text">Score copied to clipboard!</label>
     </div>
   </div>
 </div>
