#30 new copy paste text

--- a/src/assets/templates/week_score.mustache
+++ b/src/assets/templates/week_score.mustache
@@ -1,6 +1,6 @@
-XP Quiz - xpquiz.github.io
+❔ XP Quiz - xpquiz.github.io 🤔
 Here's my week score!
 
-Right answers: ${this.rightAnswers}
-Wrong answers: ${this.wrongAnswers}
-Total score: ${this.currentScore}`
+🟩 Right answers: {{rightAnswers}}
+🟥 Wrong answers: {{wrongAnswers}}
+🟦 Total score: {{totalScore}}
