--- a/src/app/score-window/score-window.component.sass
+++ b/src/app/score-window/score-window.component.sass
@@ -45,3 +45,17 @@
     color: green
     font-weight: bold
     margin: 5px
+
+  &_previous-scores
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+    .tree-view
+      margin: 5px
+      width: 200px
+      max-height: 200px
+      overflow: auto
+
