--- a/src/app/wrong-answer-window/wrong-answer-window.component.sass
+++ b/src/app/wrong-answer-window/wrong-answer-window.component.sass
@@ -13,4 +13,16 @@
     label
       margin: 5px
 
+  &_buttons
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
 
+    app-icon-button
+      margin: 3px
+
+  &_clipboard-text
+    color: green
+    font-weight: bold
+    margin: 5px
