--- a/src/app/correct-answer-window/correct-answer-window.component.sass
+++ b/src/app/correct-answer-window/correct-answer-window.component.sass
@@ -14,3 +14,17 @@
     label
       text-align: center
       margin: 5px
+
+  &_buttons
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+
+    app-icon-button
+      margin: 3px
+
+  &_clipboard-text
+    color: green
+    font-weight: bold
+    margin: 5px
