--- a/src/assets/templates/question_result.mustache
+++ b/src/assets/templates/question_result.mustache
@@ -1,15 +1,10 @@
 ❔ XPQuiz - xpquiz.github.io 🤔
-The question was...
 
 👉 {{{question}}} 👈
-
-With the following answers...
 
 🟩 {{{rightAnswer}}}
 {{#wrongAnswers}}
 🟥 {{{.}}}
 {{/wrongAnswers}}
 
-And i picked...
-
-{{{selectedAnswer}}}
+I picked... {{{selectedAnswer}}} {{#questionPoints}}(+{{.}} point(s)){{/questionPoints}}
