--- a/src/app/score-window/score-window.component.sass
+++ b/src/app/score-window/score-window.component.sass
@@ -47,15 +47,26 @@
     margin: 5px
 
   &_previous-scores
-    width: 100%
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
 
     .tree-view
-      margin: 5px
       width: 200px
       max-height: 200px
       overflow: auto
 
+  &_all-time-score
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+    .tree-view
+      width: 200px
+      max-height: 200px
+      overflow: auto
+
+      &_year
+        height: 19px
