--- a/src/app/question-window/question-window.component.html
+++ b/src/app/question-window/question-window.component.html
@@ -3,6 +3,10 @@
     <app-window-title-bar iconPath="question.png" title="Question!"></app-window-title-bar>
     <div class="window-body window_question_body">
       <ng-container *ngIf="!this.showQuestion">
+        <div class="window_question_body_image">
+          <img ngSrc="assets/icons/question-loading.png"
+               alt="" height="40" width="40"/>
+        </div>
         <div class="window_question_body_loading">
           <label class="window_question_body_loading_title">Loading your question, please hold on a moment...</label>
           <progress class="window_question_body_loading_progress" max="100" [value]="this.loadingProgressBar"></progress>
