--- a/src/app/question-window/question-window.component.sass
+++ b/src/app/question-window/question-window.component.sass
@@ -9,6 +9,11 @@
 
     &_question
       &_body
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: center
+
         &_loading
           display: flex
           flex-direction: column
@@ -17,9 +22,16 @@
 
           &_title
             margin: 5px
+            text-align: center
 
           &_progress
             margin: 5px
+
+        &_image
+          width: 30%
+          display: flex
+          align-items: initial
+          justify-content: center
 
         &_loaded
           display: flex
@@ -53,8 +65,6 @@
 
 
     &_check-answer
-      width: 300px
-
       &_body
         display: flex
         flex-direction: row
@@ -68,7 +78,6 @@
           justify-content: center
 
         &_question
-          width: 70%
           display: flex
           flex-direction: column
           align-items: center
