--- a/src/assets/templates/question_result.mustache
+++ b/src/assets/templates/question_result.mustache
@@ -1,5 +1,3 @@
-❔ XPQuiz - xpquiz.github.io 🤔
-
 👉 {{{question}}} 👈
 
 🟩 {{{rightAnswer}}}
@@ -8,3 +6,5 @@
 {{/wrongAnswers}}
 
 I picked... {{{selectedAnswer}}} {{#questionPoints}}(+{{.}} point(s)){{/questionPoints}}
+
+🤔 XPQuiz - xpquiz.github.io ❔
