--- a/src/assets/templates/week_score.mustache
+++ b/src/assets/templates/week_score.mustache
@@ -1,6 +1,7 @@
-❔ XPQuiz - xpquiz.github.io 🤔
-Here's my week score!
+Here are my results for {{ year }}, week {{ week }}!
 
 🟩 Right answers: {{rightAnswers}}
 🟥 Wrong answers: {{wrongAnswers}}
 🟦 Total score: {{totalScore}}
+
+🤔 XPQuiz - xpquiz.github.io ❔
