--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -12,7 +12,7 @@
 
     <div class="window-body_buttons">
       <app-icon-button iconPath="quiz.png" title="New quiz"
-                       (onButtonClick)="this.redirectTo(PathsEnum.QUIZ)"
+                       (onButtonClick)="this.redirectTo(PathsEnum.GAME_MODE)"
                        [disabled]="!this.quizCanBeAnswered"></app-icon-button>
       <app-icon-button iconPath="score.png" title="My score"
                        (onButtonClick)="this.redirectTo(PathsEnum.SCORES)"></app-icon-button>
