--- a/src/app/question-window/question-window.component.html
+++ b/src/app/question-window/question-window.component.html
@@ -15,10 +15,10 @@
 
       <ng-container *ngIf="this.showQuestion">
         <div class="window_question_body_loaded">
-          <label class="window_question_body_loaded_title" [innerHTML]="this.question"></label>
-          <label class="window_question_body_loaded_points">[{{this.questionPoints}} point(s) for this question]</label>
+          <label class="window_question_body_loaded_title" [innerHTML]="this.question!.question"></label>
+          <label class="window_question_body_loaded_points">[{{this.question!.points}} point(s) for this question]</label>
           <div class="window_question_body_loaded_list">
-            <ng-container *ngFor="let answer of this.answers">
+            <ng-container *ngFor="let answer of this.question!.answers">
               <button [disabled]="this.selectedAnswer"
                       [ngClass]="'window_question_body_loaded_list_option-button ' + (answer === this.selectedAnswer ? 'window_question_body_loaded_list_option-button_bold' : '')"
                       (click)="this.onClickAnswer(answer)">{{ this.getAnswerLabel(answer) }}</button>
