--- a/src/app/question-trifecta-window/question-trifecta-window.component.sass
+++ b/src/app/question-trifecta-window/question-trifecta-window.component.sass
@@ -93,7 +93,6 @@
               &_bold
                 font-weight: bold
 
-
     &_check-answer
       &_body
         display: flex
@@ -115,6 +114,7 @@
 
           &_title
             margin: 5px
+            text-align: center
 
           &_buttons
             display: flex
