--- a/src/app/wrong-answer-window/wrong-answer-window.component.html
+++ b/src/app/wrong-answer-window/wrong-answer-window.component.html
@@ -2,8 +2,9 @@
   <app-window-title-bar iconPath="critical.png" title="Oh no!"></app-window-title-bar>
   <div class="window-body">
     <div class="window-body_title">
-      <label>That was not the right answer! The answer was &nbsp;<b>[{{this.correctAnswer}}]</b></label>
-      <label>Come back in 3 hours for another question!</label>
+      <label>You got it wrong! The correct answer(s) was/were:</label>
+      <label><b>[{{ this.correctAnswers }}]</b></label>
+      <label>Come back in {{ this.hoursToPlayAgain }} hours for another question!</label>
     </div>
 
     <div class="window-body_buttons">
