--- a/src/app/common/icon-text-button/icon-text-button.component.sass
+++ b/src/app/common/icon-text-button/icon-text-button.component.sass
@@ -3,7 +3,7 @@ button
   flex-direction: column
   align-items: center
   justify-content: center
-  min-height: 100px
+  height: 130px
   width: 170px
 
   img
