--- a/src/app/common/icon-text-button/icon-text-button.component.html
+++ b/src/app/common/icon-text-button/icon-text-button.component.html
@@ -1,4 +1,4 @@
-<button (click)="this.onClick()">
+<button (click)="this.onClick()" [disabled]="this.disabled">
   <img
     [ngSrc]="'assets/icons/30x30/' + this.iconPath"
     alt="" [height]="this.iconSize" [width]="this.iconSize"/>
