--- a/src/app/about-window/about-window.component.html
+++ b/src/app/about-window/about-window.component.html
@@ -15,6 +15,6 @@
       at DeviantArt</a></b></label>
 
     <app-icon-button iconPath="home.png" title="Return to home"
-                     (onButtonClick)="this.returnHome()"></app-icon-button>
+                     (onButtonClick)="this.router.navigateByUrl(PathsEnum.HOME)"></app-icon-button>
   </div>
 </div>
