--- a/src/app/correct-answer-window/correct-answer-window.component.html
+++ b/src/app/correct-answer-window/correct-answer-window.component.html
@@ -10,7 +10,7 @@
       <app-icon-button iconPath="copy.png" title="Share result" [copy-clipboard]="this.clipboardText"
                        (onButtonClick)="this.showClipboardMessage()"></app-icon-button>
       <app-icon-button iconPath="home.png" title="Return to home"
-                       (onButtonClick)="this.returnHome()"></app-icon-button>
+                       (onButtonClick)="this.router.navigateByUrl(PathsEnum.HOME);"></app-icon-button>
     </div>
     <div *ngIf="this.displayClipboardMessage">
       <label class="window-body_clipboard-text">Question result copied to clipboard!</label>
